--- a/GameEngineArchitecture/imgui.ini
+++ b/GameEngineArchitecture/imgui.ini
@@ -1,10 +1,10 @@
 [Debug]
-Pos=30,-20
-Size=400,400
+Pos=29,45
+Size=195,190
 Collapsed=0
 
 [ImGui Demo]
-Pos=237,-13
+Pos=237,-12
 Size=550,680
 Collapsed=0
 
